<resources>
    <string name="app_name">RA</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">Home</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_verfied_click_to_verify">Not Verfied(Click to Verify)</string>
    <string name="result_analysis_application">RESULT ANALYSIS APPLICATION</string>
    <string name="administrator">Administrator</string>
    <string name="unit_test">Unit Test</string>
    <string name="edit_and_submit_mark_n_and_more">Edit And Submit Mark  And More...</string>
    <string name="semester">Semester</string>
    <string name="check_progress_n_result_s_and_more">Check Progress  Result\'s And More..</string>
    <string name="r">Select Role</string>
    <string name="measure_activity_and_more">Measure Activity And More...</string>
    <string name="pci">PCI</string>
    <string name="add">Add</string>
    <string name="mad">MAD</string>
    <string name="pwp">PWP</string>
    <string name="mgt">MGT</string>
    <string name="semester_6">SEMESTER 6</string>
    <string name="cpp">CPP</string>
    <string name="itr">ITR</string>
    <string name="adm">ADM</string>
    <string name="acn">ACN</string>
    <string name="css">CSS</string>
    <string name="ste">STE</string>
    <string name="ajp">AJP</string>
    <string name="osy">OSY</string>
    <string name="est">EST</string>
    <string name="semester_5">SEMESTER 5</string>
    <string name="gad">GAD</string>
    <string name="mic">MIC</string>
    <string name="dcc">DCC</string>
    <string name="sen">SEN</string>
    <string name="jpr">JPR</string>
    <string name="semester_4">SEMESTER 4</string>
    <string name="dte">DTE</string>
    <string name="dms">DMS</string>
    <string name="cgr">CGR</string>
    <string name="dsu">DSU</string>
    <string name="oop">OOP</string>
    <string name="semester_3">SEMESTER 3</string>
    <string name="wpd">WPD</string>
    <string name="cph">CPH</string>
    <string name="bcc">BCC</string>
    <string name="ami">AMI</string>
    <string name="eec">EEC</string>
    <string name="semester_2">SEMESTER 2</string>
    <string name="bec">BEC</string>
    <string name="wpc">WPC</string>
    <string name="ege">EGE</string>
    <string name="bms">BMS</string>
    <string name="ict">ICT</string>
    <string name="bsc">BSC</string>
    <string name="eng">ENG</string>
    <string name="semester_1">SEMESTER 1</string>
    <string name="assign_subject">Assign Subject</string>
    <string name="eti">ETI</string>
    <string name="cpe">CPE</string>
    <string name="ede">EDE</string>
    <string name="dmw">DMW</string>
    <string name="nis">NIS</string>
    <string name="wbp">WBP</string>

    <array name="roles">
        <item>Teacher</item>
        <item>DEO</item>
        <item>HOD</item>
    </array>
    <string name="title_activity_assign_subject">AssignSubject</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="student_database">Student Database</string>
    <string name="view_and_update_student_database">View And Update Student Database</string>
    <string name="analytics">Analytics</string>
    <string name="fy_computer">FY COMPUTER</string>
    <string name="sy_computer">SY COMPUTER</string>
    <string name="ty_computer">TY COMPUTER</string>
    <string name="analysis">Analysis</string>
    <string name="edit_student_info">Edit Student Info.</string>
</resources>
